@@ -7,12 +7,14 @@ import imi.spring.backend.models.Location;
 import imi.spring.backend.models.Post;
 import imi.spring.backend.services.*;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 import org.springframework.boot.autoconfigure.security.reactive.ReactiveSecurityAutoConfiguration;
 import org.springframework.boot.autoconfigure.security.servlet.SecurityFilterAutoConfiguration;
 import org.springframework.context.annotation.Bean;
+import org.springframework.core.env.Environment;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 
 import java.io.File;
@@ -27,6 +29,9 @@ import java.nio.file.Paths;
 		SecurityFilterAutoConfiguration.class}
 )
 public class BackendApplication {
+
+	@Autowired
+	private Environment env;
 
 	public static void main(String[] args) {
 
@@ -44,13 +49,23 @@ public class BackendApplication {
 						  PostLikeService postLikeService, CommentService commentService, FollowersService followersService){
 		return args -> {
 
-			Path path = Paths.get("src/main/resources/static/images/default-user.jpeg");
-			byte[] pictureInBytes = Files.readAllBytes(path);
+			byte[] pictureInBytes = Files.readAllBytes(Path.of(env.getProperty("profile.image.default")));
 
-			appUserService.saveUser(new AppUser("user1@gmail.com", "user1", "user1", pictureInBytes));
-			appUserService.saveUser(new AppUser("user2@gmail.com", "user2", "user2", pictureInBytes));
-			appUserService.saveUser(new AppUser("user3@gmail.com", "user3", "user3", pictureInBytes));
-			appUserService.saveUser(new AppUser("user4@gmail.com", "user4", "user4", pictureInBytes));
+			AppUser user = new AppUser("user1@gmail.com", "user1", "user1");
+			user.setImage(pictureInBytes);
+			appUserService.saveUser(user);
+
+			user = new AppUser("user2@gmail.com", "user2", "user2");
+			user.setImage(pictureInBytes);
+			appUserService.saveUser(user);
+
+			user = new AppUser("user3@gmail.com", "user3", "user3");
+			user.setImage(pictureInBytes);
+			appUserService.saveUser(user);
+
+			user = new AppUser("user4@gmail.com", "user4", "user4");
+			user.setImage(pictureInBytes);
+			appUserService.saveUser(user);
 
 			locationService.saveLocation(new Location("Eiffel Tower", 48.858093, 2.294694));
 			locationService.saveLocation(new Location("Stonehenge", 51.1740, -1.8224));
